Fix T45912: Opensubdiv meshes don't properly center when using <numpad .>