source/blender/blenkernel/intern/CCGSubSurf_opensubdiv.c
@@ -906,7 +906,8 @@ void ccgSubSurf_getMinMax(CCGSubSurf *ss, float r_min[3], float r_max[3])
 	int i;
 	BLI_assert(ss->skip_grids == true);
 	for (i = 0; i < ss->osd_num_coarse_coords; i++) {
-		DO_MINMAX(ss->osd_coarse_coords[i], r_min, r_max);
+		/* Coarse coordinates has normals interleaved into the array. */
+		DO_MINMAX(ss->osd_coarse_coords[2 * i], r_min, r_max);
 	}
 }
 
